Changed color scheme

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       
       <h3 class="subsection">LOISIRS</h3>
       <div id="loisirs">
-        <i class="fas fa-laptop-code fa-3x"></i><i class="fas fa-guitar fa-3x"></i><i class="fas fa-jedi fa-3x"></i>
+        <span class="fas fa-laptop-code fa-3x"></span><span class="fas fa-guitar fa-3x"></span><span class="fas fa-jedi fa-3x"></span>
       </div>
 
     </aside>
