--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </p><br />
         <p>
           Site Web<br />
-          www.name.com
+          https://meimato.github.io/P2/
         </p><br />
         <p>
           Twitter<br />
@@ -39,7 +39,7 @@
 
       <h3 class="subsection">A PROPOS DE MOI</h3>
       <div class="text-subsection">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non consequat lectus. Nullam elementum eros eu justo iaculis facilisis. Vivamus porta tempor diam. Quisque malesuada mauris vitae ligula venenatis eleifend sed porttitor elit. Aenean vitae orci semper, scelerisque lorem eu, sagittis diam. Praesent fringilla accumsan tortor, nec laoreet nulla pretium cursus. Vestibulum eu ante turpis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nam posuere neque finibus metus vehicula, at rutrum ipsum vehicula. Nulla ac luctus dui, eu rhoncus mauris. Donec in commodo nisi.</p>
+        <p>Gabriele Ferro est Développeur Web Freelance et un Cast Member.<br />Avant de rejoindre l'équipe de Disneyland Paris, il a passé toute sa vie devant l'ordinateur, depuis sa naissance.<br />Gabriele est une personne très curieuse et il aime apprendre des nouvelle choses chaque jours.<br /></p>
       </div>
       
       <h3 class="subsection">LOISIRS</h3>
