--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
       <h3 class="subsection">A PROPOS DE MOI</h3>
       <div class="text-subsection">
-        <p>Gabriele Ferro est Développeur Web Freelance et un Cast Member.</p><p>Avant de rejoindre l'équipe de Disneyland Paris, il a passé toute sa vie devant l'ordinateur.</p><p>Gabriele est une personne très curieuse et il aime apprendre des nouvelle choses chaque jours.</p>
+        <p>Gabriele Ferro est Développeur Web Freelance et un Cast Member.</p><p>Avant de rejoindre l'équipe de Disneyland Paris, Gabriele a passé toute sa vie devant l'ordinateur.</p><p>Gabriele est une personne très curieuse et il aime apprendre des nouvelle choses chaque jours.</p>
       </div>
       
       <h3 class="subsection">LOISIRS</h3>
