--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Mon CV en ligne</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <!-- IE does not support PNG favicons until version 11. So our first line is a conditional comment for favicons in IE 9 and below-->
+    <!--[if IE]><link rel="shortcut icon" href="path/to/favicon.ico"><![endif]-->
   </head>
   
   <body>
@@ -44,7 +46,7 @@
       
       <h3 class="subsection">LOISIRS</h3>
       <div id="loisirs">
-        <span class="fas fa-laptop-code fa-3x"></span><span class="fas fa-guitar fa-3x"></span><span class="fas fa-jedi fa-3x"></span>
+        <span class="fas fa-laptop-code fa-2x"></span><span class="fas fa-guitar fa-2x"></span><span class="fas fa-jedi fa-2x"></span>
       </div>
 
     </aside>
@@ -56,7 +58,7 @@
 
       <section id="formation">
         <header>
-          <span class="fas fa-graduation-cap"></span><h3>FORMATION</h3>
+          <span class="fas fa-graduation-cap fa-2x"></span><h3>FORMATION</h3>
         </header>
         <hr>
         <ul>
@@ -171,7 +173,7 @@
 
       <section id="experience">
         <header>
-          <span class="fas fa-briefcase"></span><h3>EXPERIENCE PROFESSIONNELLE</h3>
+          <span class="fas fa-briefcase fa-2x"></span><h3>EXPERIENCE PROFESSIONNELLE</h3>
         </header>
         <hr>
 
@@ -217,7 +219,7 @@
 
       <section id="recommandations">
         <header>
-          <span class="fas fa-pencil-alt"></span><h3>RECOMMANDATIONS</h3>
+          <span class="fas fa-pencil-alt fa-2x"></span><h3>RECOMMANDATIONS</h3>
         </header>
         <hr>
         <div class="row">
