Added Favicon and Meta tags

--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Mon CV en ligne</title>
+    <title>Gabriele Ferro - Mon CV en ligne</title>
+    <meta name="description" content="Discover Gabriele, Jedi Mast...ehm... Cast Member at Disneyland Paris and Web Developer. ">
+    <meta name="keywords" content="Gabriele Ferro, Gabriele, Ferro, Cast Member, Disneyland, Disneyland Paris, Web Developer, HTML, CSS, JavaScript, Jedi Master">
+    <meta name="author" content="Gabriele Ferro">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     <!-- IE does not support PNG favicons until version 11. So our first line is a conditional comment for favicons in IE 9 and below-->
-    <!--[if IE]><link rel="shortcut icon" href="path/to/favicon.ico"><![endif]-->
+    <!--[if IE]><link rel="shortcut icon" href="favicon.ico"><![endif]-->
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
   </head>
   
   <body>
