--- a/index.html
+++ b/index.html
@@ -53,7 +53,18 @@
       
       <h3 class="subsection">LOISIRS</h3>
       <div id="loisirs">
-        <span class="fas fa-laptop-code fa-2x"></span><span class="fas fa-guitar fa-2x"></span><span class="fas fa-jedi fa-2x"></span>
+        <span class="fa-stack">
+          <span class="far fa-circle fa-2x fa-stack-2x"></span>
+          <span class="fas fa-laptop-code fa-1x fa-stack-1x"></span>
+        </span>
+        <span class="fa-stack">
+          <span class="far fa-circle fa-2x fa-stack-2x"></span>
+          <span class="fas fa-guitar fa-1x fa-stack-1x"></span>
+        </span>
+        <span class="fa-stack">
+          <span class="far fa-circle fa-2x fa-stack-2x"></span>
+          <span class="fas fa-jedi fa-1x fa-stack-1x"></span>
+        </span>
       </div>
 
     </aside>
