--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Gabriele Ferro - Mon CV en ligne</title>
-    <meta name="description" content="Discover Gabriele, Jedi Mast...ehm... Cast Member at Disneyland Paris and Web Developer. ">
+    <meta name="description" content="Discover Gabriele, Jedi Mast...ehm... Cast Member at Disneyland Paris and Web Developer.">
     <meta name="keywords" content="Gabriele Ferro, Gabriele, Ferro, Cast Member, Disneyland, Disneyland Paris, Web Developer, HTML, CSS, JavaScript, Jedi Master">
     <meta name="author" content="Gabriele Ferro">
+    <meta property="og:title" content="Gabriele Ferro - Mon CV en ligne" />
+    <meta property="og:url" content="https://meimato.github.io/P2/" />
+    <meta property="og:image" content="https://github.com/Meimato/P2/blob/master/OG-Image.jpg" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="fr_FR" />
+    <meta property="og:description" content="Discover Gabriele, Jedi Mast...ehm... Cast Member at Disneyland Paris and Web Developer." />
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     <!-- IE does not support PNG favicons until version 11. So our first line is a conditional comment for favicons in IE 9 and below-->
