Fixed Open-Graph Image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Gabriele Ferro">
     <meta property="og:title" content="Gabriele Ferro - Mon CV en ligne" />
     <meta property="og:url" content="https://meimato.github.io/P2/" />
-    <meta property="og:image" content="https://github.com/Meimato/P2/blob/master/OG-Image.jpg" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/Meimato/P2/master/OG-Image.jpg" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="fr_FR" />
     <meta property="og:description" content="Discover Gabriele, Jedi Mast...ehm... Cast Member at Disneyland Paris and Web Developer." />
