Testing FontAwesome Offline
Testing Icons online and offline

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Gabriele Ferro - Mon CV en ligne</title>
     <meta name="description" content="Discover Gabriele, Jedi Mast...ehm... Cast Member at Disneyland Paris and Web Developer.">
-    <meta name="keywords" content="Gabriele Ferro, Gabriele, Ferro, Cast Member, Disneyland, Disneyland Paris, Web Developer, HTML, CSS, JavaScript, Jedi Master">
-    <meta name="author" content="Gabriele Ferro">
-    <meta property="og:title" content="Gabriele Ferro - Mon CV en ligne" />
+    <meta name="keywords" content="Gabriele F, Gabriele, Cast Member, Disneyland, Disneyland Paris, Web Developer, HTML, CSS, JavaScript, Jedi Master">
+    <meta name="author" content="Gabriele F">
+    <meta property="og:title" content="Gabriele F - Mon CV en ligne" />
     <meta property="og:url" content="https://meimato.github.io/P2/" />
     <meta property="og:image" content="https://raw.githubusercontent.com/Meimato/P2/master/OG-Image.jpg" />
     <meta property="og:type" content="website" />
@@ -267,7 +267,6 @@
     </main>
 
     <script src="https://kit.fontawesome.com/c6bde57d86.js" crossorigin="anonymous"></script>
-
     <script type="module">
       import 'https://cdn.jsdelivr.net/npm/@pwabuilder/pwaupdate';
 
