Hotix FA offline css

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <meta property="og:locale" content="fr_FR" />
     <meta property="og:description" content="Discover Gabriele, Jedi Mast...ehm... Cast Member at Disneyland Paris and Web Developer." />
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="css/fontawesome.min.css">
+    <link rel="stylesheet" type="text/css" href="css/regular.min.css">
+    <link rel="stylesheet" type="text/css" href="css/solid.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     <!-- IE does not support PNG favicons until version 11. So our first line is a conditional comment for favicons in IE 9 and below-->
     <!--[if IE]><link rel="shortcut icon" href="favicon.ico"><![endif]-->
