--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Gabriele Ferro - Mon CV en ligne</title>
+    <title>Gabriele F - Mon CV en ligne</title>
     <meta name="description" content="Discover Gabriele, Jedi Mast...ehm... Cast Member at Disneyland Paris and Web Developer.">
     <meta name="keywords" content="Gabriele F, Gabriele, Cast Member, Disneyland, Disneyland Paris, Web Developer, HTML, CSS, JavaScript, Jedi Master">
     <meta name="author" content="Gabriele F">
