Fixed Email Address

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </p><br />
         <p>
           Email<br />
-          <a href="mailto:gabrielluzzo@gmail.com">gabrielluzzo@gmail.com</a>
+          <a href="mailto:gabrielluzzo[at]gmail.com">gabrielluzzo[at]]gmail.com</a>
         </p><br />
         <p>
           Site Web<br />
