Hotfix Email Address

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </p><br />
         <p>
           Email<br />
-          <a href="mailto:gabrielluzzo[at]gmail.com">gabrielluzzo[at]]gmail.com</a>
+          gabrielluzzo[at]gmail.com
         </p><br />
         <p>
           Site Web<br />
