--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
     <aside>
 
       <figure>
-        <img src="https://i.pinimg.com/originals/b0/90/3f/b0903fc3dfb148c5d4d40d0f6227d3a2.jpg" alt="Gabriele F"/>
-        <figcaption>A Jedi knight with a green saber laser</figcaption>
+        <img src="https://i.pinimg.com/originals/b0/90/3f/b0903fc3dfb148c5d4d40d0f6227d3a2.jpg" alt="A Jedi knight with a green saber laser"/>
       </figure>
 
       <h3 class="subsection">CONTACT</h3>
