Added Meta tag robots

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <meta name="description" content="Discover Gabriele, Jedi Mast...ehm... Cast Member at Disneyland Paris and Web Developer.">
     <meta name="keywords" content="Gabriele F, Gabriele, Cast Member, Disneyland, Disneyland Paris, Web Developer, HTML, CSS, JavaScript, Jedi Master">
     <meta name="author" content="Gabriele F">
+    <meta name="robots" content="index">
     <meta property="og:title" content="Gabriele F - Mon CV en ligne" />
     <meta property="og:url" content="https://meimato.github.io/P2/" />
     <meta property="og:image" content="https://raw.githubusercontent.com/Meimato/P2/master/OG-Image.jpg" />
