Removed FontAwesome Kit

--- a/index.html
+++ b/index.html
@@ -14,8 +14,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Gabriele F - Mon CV en ligne</title>
-    <meta name="description" content="Discover Gabriele, Jedi Mast...ehm... Cast Member at Disneyland Paris and Web Developer.">
-    <meta name="keywords" content="Gabriele F, Gabriele, Cast Member, Disneyland, Disneyland Paris, Web Developer, HTML, CSS, JavaScript, Jedi Master">
+    <meta name="description" content="Discover Gabriele, Cast Member at Disneyland Paris and Web Developer.">
+    <meta name="keywords" content="Gabriele,
+    cast member,
+    développeur web,
+    developpeur web,
+    developpement web,
+    web developpeur,
+    web développeur,
+    développeur web mobile,
+    dev web freelance,
+    développeur,
+    developpeur,
+    développeur informatique,
+    développeur front end">
     <meta name="author" content="Gabriele F">
     <meta name="robots" content="index">
     <meta property="og:title" content="Gabriele F - Mon CV en ligne" />
@@ -23,11 +35,9 @@
     <meta property="og:image" content="https://raw.githubusercontent.com/Meimato/P2/master/OG-Image.jpg" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="fr_FR" />
-    <meta property="og:description" content="Discover Gabriele, Jedi Mast...ehm... Cast Member at Disneyland Paris and Web Developer." />
+    <meta property="og:description" content="Discover Gabriele, Cast Member at Disneyland Paris and Web Developer." />
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="css/fontawesome.min.css">
-    <link rel="stylesheet" type="text/css" href="css/regular.min.css">
-    <link rel="stylesheet" type="text/css" href="css/solid.min.css">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     <!-- IE does not support PNG favicons until version 11. So our first line is a conditional comment for favicons in IE 9 and below-->
     <!--[if IE]><link rel="shortcut icon" href="favicon.ico"><![endif]-->
@@ -279,7 +289,6 @@
 
     </main>
 
-    <script src="https://kit.fontawesome.com/c6bde57d86.js" crossorigin="anonymous"></script>
     <script type="module">
       import 'https://cdn.jsdelivr.net/npm/@pwabuilder/pwaupdate';
 
