Updated alt description for the photo

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <aside>
 
       <figure>
-        <img src="https://i.pinimg.com/originals/b0/90/3f/b0903fc3dfb148c5d4d40d0f6227d3a2.jpg" alt="A Jedi knight with a green saber laser"/>
+        <img src="https://github.com/Meimato/P2/blob/master/yarr.png" alt="Me wearing a pirate costume"/>
       </figure>
 
       <h3 class="subsection">CONTACT</h3>
@@ -289,6 +289,7 @@
 
     </main>
 
+    <script src="https://kit.fontawesome.com/c6bde57d86.js" crossorigin="anonymous"></script>
     <script type="module">
       import 'https://cdn.jsdelivr.net/npm/@pwabuilder/pwaupdate';
 
