Hofix photo link

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <aside>
 
       <figure>
-        <img src="https://github.com/Meimato/P2/blob/master/yarr.png" alt="Me wearing a pirate costume"/>
+        <img src="https://raw.githubusercontent.com/Meimato/P2/master/yarr.png" alt="Me wearing a pirate costume"/>
       </figure>
 
       <h3 class="subsection">CONTACT</h3>
