--- a/index.html
+++ b/index.html
@@ -2,21 +2,13 @@
 <html lang="fr">
   
   <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-170824097-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'UA-170824097-1');
-    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Gabriele F - Mon CV en ligne</title>
     <meta name="description" content="Discover Gabriele, Cast Member at Disneyland Paris and Web Developer.">
     <meta name="keywords" content="Gabriele,
     cast member,
+    cast member disney,
     développeur web,
     developpeur web,
     developpement web,
@@ -36,8 +28,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="fr_FR" />
     <meta property="og:description" content="Discover Gabriele, Cast Member at Disneyland Paris and Web Developer." />
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="style.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     <!-- IE does not support PNG favicons until version 11. So our first line is a conditional comment for favicons in IE 9 and below-->
     <!--[if IE]><link rel="shortcut icon" href="favicon.ico"><![endif]-->
@@ -52,7 +43,7 @@
     <aside>
 
       <figure>
-        <img src="https://raw.githubusercontent.com/Meimato/P2/master/yarr.png" alt="Me wearing a pirate costume"/>
+        <img src="yarr.png" alt="Me wearing a pirate costume"/>
       </figure>
 
       <h3 class="subsection">CONTACT</h3>
@@ -289,7 +280,16 @@
 
     </main>
 
-    <script src="https://kit.fontawesome.com/c6bde57d86.js" crossorigin="anonymous"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-170824097-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-170824097-1');
+    </script>
+    <script async src="https://kit.fontawesome.com/c6bde57d86.js" crossorigin="anonymous"></script>
     <script type="module">
       import 'https://cdn.jsdelivr.net/npm/@pwabuilder/pwaupdate';
 
